# megaFinder

./: .gitignore  CMakeLists.txt  MegaFinder.pro  dirlist.cpp  fileindexer.cpp  fileindexer.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  mytreewidget.cpp  mytreewidget.cpp.autosave  mytreewidget.h  mytreewidget.h.autosave  patternsearcher.cpp  patternsearcher.h  progressdialog.cpp  progressdialog.h  progressdialog.ui  tbufferedreader.cpp  tbufferedreader.h  textviewer.cpp  textviewer.h  trigramsrepository.cpp  trigramsrepository.h  trigramssearcher.cpp  trigramssearcher.h
tests/: testing.cpp
